[FIX] Fix overflow of copyright footer.

--- a/css/base.css
+++ b/css/base.css
@@ -274,7 +274,7 @@ p {
   right: 0;
   line-height: 1;
   opacity: .5;
-  padding: 8px;
+  padding: 4px 8px;
   position: fixed;
   z-index: 1000;
 }
